# pcurl-get

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  VERSION  cliff.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/: CHANGELOG.md  README-workflow.md  README.md  RELEASE-PROCESS.md  config
.github/workflows/: build-release.yml  ci-debug.yaml  ci-demo.yaml  ci.yml  release.yml
src/: main.rs
tests/: tests.rs
tools/: .gitignore  cargo_version.rs
