# Cargo.toml
#:tombi schema.strict = false
# vim: set ft=toml

[package]
name = "pcurl-get"
version = "0.2.0+"
edition = "2024"
license = "MIT"
categories = ["command-line-interface"]
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
md5 = "0.8"
reqwest = { version = "0.13.3", features = ["json"] }
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.27.0"

[dev-dependencies]
mockito = "1.7.2"
